tests/parser/bad/cmodule-contract-cid-lparen-id-colon-tid-with.scilla
scilla_version 0

(* missing the comma *)
contract Test
(truth: (Bool) amount : Uint128)
